crates/context-macro/tests/constraints/missing_system_program.fail.stderr
error: Using `init` requires including the `Program<System>` account
  --> tests/constraints/missing_system_program.fail.rs:14:1
   |
14 | #[context]
   | ^^^^^^^^^^
   |
   = note: this error originates in the attribute macro `context` (in Nightly builds, run with -Z macro-backtrace for more info)
